# llm-forge

./: README.md  README_zh.md  pyproject.toml
projects/transformer-from-scratch/: model.py  pyproject.toml
tests/tokenization/: main.py
tutorials/大模型基础入门/: 1.什么是大语言模型.md  2.大语言模型是如何运作的.md  3.transformer架构.md
tutorials/大模型实践/: transformer-from-scratch.md
