[project]
name = "transformer-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "tiktoken>=0.9.0",
    "torch>=2.7.0",
]
